actual-budget/ingress.yaml
---
kind: IngressRoute
apiVersion: traefik.io/v1alpha1
metadata:
  name: actual-budget
  namespace: actual-budget
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`actual.efym.net`)
      kind: Rule
      middlewares:
        - name: authelia
      services:
        - name: actual-budget
          port: 5006
  tls:
    secretName: efym-net-tls
